# astrabot

./: .gitignore  99-orbbec-astra.rules  README.md  README_01.md  README_02.md  README_03.md  README_04.md  capture.py  check_depth.sh  check_sim.sh  install_ros2.sh  record_handheld.sh  record_mobile.sh  requirements.txt  run_mapping.sh  run_mobile_mapping.sh  run_motor_pwm_tune.sh  run_orbbec_preview.sh  run_preview.sh  run_sim_mapping.sh  run_sim_teleop.sh  setup_udev.sh  stop_sim.sh  view_bag_cloud.sh  view_bag_trajectory.sh  view_cloud.sh  view_mobile_map.sh
Adruino_PID-full/: PID-full.ino
Adruino_PID-full/PID-full/: PID-full.ino
docs/: INDOOR_INSPECTION_ROBOT.md
esp32_base/: platformio.ini
esp32_base/include/: config.h  config_l298n.h  config_rplidar_bridge.h  lidar_tcp_bridge.h  microros_qos.h  microros_transport_setup.h
esp32_base/src/: main.cpp  main_l298n.cpp  main_rplidar_bridge.cpp
ros2_ws/src/astra_pro_slam/: package.xml  setup.cfg  setup.py
ros2_ws/src/astra_pro_slam/astra_pro_slam/: camera_node.py  rgbd_cloud_node.py
ros2_ws/src/astra_pro_slam/config/: camera.yaml  rtabmap_params.yaml
ros2_ws/src/astra_pro_slam/launch/: camera.launch.py  handheld_mapping.launch.py  live_preview.launch.py  offline_handheld_slam.launch.py  offline_handheld_tf.launch.py  record_handheld.launch.py
ros2_ws/src/astra_pro_slam/rviz/: live.rviz  mapping.rviz
ros2_ws/src/indoor_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/indoor_bringup/config/: ekf.yaml  fastdds_no_shm.xml  gazebo_diff_drive.yaml  gazebo_diff_drive_sim.yaml  mapping_layers.yaml  nav2_params.yaml  nav2_params_lidar_only.yaml  nav2_params_no_tof.yaml  nav2_params_tof_only.yaml  patrol_waypoints.yaml  person_tracker.yaml  slam_toolbox.yaml  slam_toolbox_deck.yaml  slam_toolbox_sim.yaml
ros2_ws/src/indoor_bringup/indoor_bringup/: camera_projection.py  depth_scan_layer_node.py  gazebo_tof_range_node.py  laser_utils.py  microros_qos.py  motor_pwm_tune_gui_node.py  patrol_node.py  person_kalman.py  person_tracker_node.py  rplidar_tcp_relay_node.py  scan_fusion_node.py  scan_to_cloud_node.py  sim_camera_info_node.py  sim_gazebo_adapter_node.py  sim_gt_odom_node.py  sim_slam_scan_viz_node.py  sim_teleop_gui_node.py  sim_world_viz_node.py  static_joint_state_node.py  tof_scan_layer_node.py
ros2_ws/src/indoor_bringup/launch/: bringup.launch.py  deck_wifi_lidar.launch.py  description.launch.py  gazebo.launch.py  localization.launch.py  mapping.launch.py  mapping_layers.launch.py  motor_pwm_tune.launch.py  nav2.launch.py  navigation.launch.py  patrol.launch.py  person_tracker.launch.py  rplidar_wifi.launch.py  sensors.launch.py  sim_teleop.launch.py  simulation.launch.py  slam.launch.py
ros2_ws/src/indoor_bringup/maps/: sim_lab.pgm  sim_lab.yaml
ros2_ws/src/indoor_bringup/rviz/: indoor_slam.rviz  mapping_layers.rviz  rplidar_wifi.rviz  sim_mapping.rviz
ros2_ws/src/indoor_bringup/urdf/: indoor_robot.gazebo.xacro  indoor_robot.urdf
ros2_ws/src/indoor_bringup/worlds/: indoor_sim.sdf
ros2_ws/src/mobile_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/mobile_base/config/: base.yaml  rgbd_odometry_mobile.yaml  rtabmap_mobile.yaml  rtabmap_mobile_icp_loop.yaml  rtabmap_mobile_offline.yaml  rtabmap_mobile_offline_icp_loop.yaml  rtabmap_mobile_offline_plane_icp.yaml  rtabmap_mobile_offline_s2_visicp.yaml  rtabmap_mobile_offline_s2s3_visicp_vo.yaml  rtabmap_mobile_offline_s3_vo.yaml  rtabmap_mobile_plane_icp.yaml
ros2_ws/src/mobile_base/launch/: camera_static_tf.launch.py  mobile_mapping.launch.py  offline_mobile_slam.launch.py  offline_replay_tf.launch.py  record_mobile.launch.py  view_bag_cloud.launch.py  view_mobile_map.launch.py
ros2_ws/src/mobile_base/mobile_base/: arduino_base_node.py  odom_covariance_node.py  odom_path_node.py  odom_tf_broadcaster.py  wall_plane_cloud_node.py
ros2_ws/src/mobile_base/rviz/: bag_cloud.rviz  mobile_mapping.rviz  odom_trajectory.rviz
ros2_ws/src/mobile_base/urdf/: deck_robot.urdf
rviz/: orbbec_live.rviz
scripts/: bag_path.sh  check_deck_odom.sh  check_depth.py  deck_slam_sync.py  deck_teleop.sh  deck_xbox_controller.sh  deck_xbox_teleop.py  export_map.sh  flash_deck_serial.sh  flash_deck_wifi.sh  flash_rplidar_bridge.sh  install_orbbec_ros2.sh  motor_pwm_tune.py  odom_to_tf.py  offline_slam.sh  offline_slam_compare.sh  plot_odom_trajectory.py  plot_wheel_counts.py  record_common.sh  run_deck_slam.sh  run_deck_wifi_lidar.sh  run_microros_agent.sh  run_microros_agent_wifi.sh  run_rplidar_wifi.sh  setup_teleop_input.sh  stop_camera.sh  teleop.sh  teleop_keyboard.py  teleop_link_diag.py  view_bag_cloud.sh  view_bag_trajectory.sh  view_cloud.py  view_odom_trajectory.sh
